<resources>

    <string name="app_name">Акфа ТЗД</string>
    <string name="bar_type">Barcode Type</string>
    <string name="scan_result">Scanned Result showing on check status </string>
    <string name="scan_on">Scan On</string>
    <string name="scan_off">Scan Off</string>
    <string name="auto_scan">Auto Scan</string>
    <string name="beep">Beep</string>
    <string name="enable_upc">Enable UPC-A</string>
    <string name="disable_upc">Disable UPC-A</string>
    <string name="property_enable">Enable UPC-A "Send Check Character"</string>
    <string name="property_disable">Disable UPC-A "Send Check Character"</string>
    <string name="msg_wait">Waiting&#8230;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">Пользователь</string>
    <string name="user_1">Axmadaliev Doston</string>
    <string name="tasks">Задания</string>
    <string name="task_2">Task 2</string>
    <string name="slash" translatable="false">/</string>
    <string name="task_id">Ид задания</string>
    <string name="all_marking_qty_title">Kол-во марк:</string>
    <string name="start">Выполниять</string>
    <string name="done">Завершить</string>
    <string name="task_list">Список заданий</string>
    <string name="no_scanned">Не сканируется</string>
    <string name="failed_scanned">Ожидает синхронизации</string>
    <string name="success_scanned">Товар успешно отсканирован</string>
    <string name="fail_scanned">Произошла ошибка при сканировании продукта</string>
    <string name="enter_pin_code">Введите PIN-код</string>
    <string name="one_number">1</string>
    <string name="two_number">2</string>
    <string name="three_number">3</string>
    <string name="four_number">4</string>
    <string name="five_number">5</string>
    <string name="six_number">6</string>
    <string name="seven_number">7</string>
    <string name="eight_number">8</string>
    <string name="nine_number">9</string>
    <string name="zero_number">0</string>
    <string name="no_result">Нет результат</string>
    <string name="unauthorised">Ошибка авторизации</string>
    <string name="not_found">Отсканированная недействительная маркировка</string>
    <string name="excess_km">Лишняя маркировка устранена</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="unknown_error">Что-то пошло не так</string>
    <string name="error_internet">Проблема с интернетом</string>
    <string name="read_fail">READ_FAIL</string>
    <string name="more">Подробный</string>
    <string name="enable_scanner_dialog">Ваш сканер отключен. Вы хотите включить его?</string>
    <string name="synchronize">Синхронизировать</string>
    <string name="ask_synchronize_failed_km">Хотите ли вы  повторно отправлять КМ, которые не удалось отправить на серверe?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="process">Процесс</string>
    <string name="closed">Закрыто</string>
    <string name="limit_scanner_km">%s отсканировал достаточное количество километров для продукта</string>
    <string name="log_out">Выйти</string>
    <string name="log_out_title">Выйти из система </string>
    <string name="log_out_message">Вы действительно хотите выйти?</string>
    <string name="user_conflict">Для входа в систему ранее вошедший в систему пользователь должен выйти из системы.</string>
    <string name="new_status">Новый</string>
    <string name="duplicate_product">Пересканированный продукт</string>
    <string name="sales">Расход</string>
    <string name="returns">Возврат</string>

</resources>
