<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:id="@+id/layout_textview_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_type" />

        <TextView
            android:id="@+id/textview_bar_type"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#20888888"
            android:gravity="start|center"
            android:text="@string/bar_type"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/scan_result" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_scan_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#20888888"
                android:text="@string/scan_result"
                android:textSize="25sp"
                android:textStyle="bold" />

        </ScrollView>

    </LinearLayout>

    <CheckBox
        android:id="@+id/check_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Intent Broadcast Result Type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" >

        <CheckBox
            android:id="@+id/check_autoscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@string/auto_scan"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/check_beep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/beep"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_scan_on"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/scan_on"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_scan_off"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/scan_off"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_enalbe_upc"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/enable_upc"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_disalbe_upc"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/disable_upc"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_prop_enable"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:text="@string/property_disable"
        android:textSize="15sp" />

</LinearLayout>