<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back_color">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/enter_pin_code"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/llPinDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinTitle">


        <ImageView
            android:id="@+id/pinDot0"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/pin_dot_item" />

        <ImageView
            android:id="@+id/pinDot1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/pin_dot_item" />

        <ImageView
            android:id="@+id/pinDot2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/pin_dot_item" />

        <ImageView
            android:id="@+id/pinDot3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/pin_dot_item" />

        <ImageView
            android:id="@+id/pinDot4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/pin_dot_item" />

        <ImageView
            android:id="@+id/pinDot5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/pin_dot_item" />


    </LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:indeterminateTint="@color/status_bar_color"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/llPinDot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinTitle" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:padding="25dp"

            android:text="@string/one_number"
            android:textColor="@color/text_color"
            android:textFontWeight="510"
            android:textSize="27sp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/two"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="25dp"

            android:text="@string/two_number"
            android:textColor="@color/text_color"
            android:textFontWeight="510"
            android:textSize="27sp"
            app:layout_constraintLeft_toRightOf="@id/one"
            app:layout_constraintRight_toLeftOf="@id/three"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="25dp"

            android:text="@string/three_number"
            android:textColor="@color/text_color"
            android:textFontWeight="510"
            android:textSize="27sp"
            app:layout_constraintLeft_toRightOf="@id/two"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="25dp"

            android:text="@string/four_number"
            android:textColor="@color/text_color"
            android:textFontWeight="510"
            android:textSize="27sp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/five"
            app:layout_constraintTop_toBottomOf="@id/one" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="25dp"

            android:text="@string/five_number"
            android:textColor="@color/text_color"
            android:textFontWeight="510"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="@id/four"
            app:layout_constraintLeft_toRightOf="@id/four"
            app:layout_constraintRight_toLeftOf="@id/six"
            app:layout_constraintTop_toTopOf="@id/four" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="25dp"

            android:text="@string/six_number"
            android:textColor="@color/text_color"
            android:textFontWeight="510"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="@id/four"
            app:layout_constraintLeft_toRightOf="@id/five"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/four" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="25dp"

            android:text="@string/seven_number"
            android:textColor="@color/text_color"
            android:textFontWeight="510"
            android:textSize="27sp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/eight"
            app:layout_constraintTop_toBottomOf="@id/four" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="25dp"

            android:text="@string/eight_number"
            android:textColor="@color/text_color"
            android:textFontWeight="510"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="@id/seven"
            app:layout_constraintLeft_toRightOf="@id/seven"
            app:layout_constraintRight_toLeftOf="@id/nine"
            app:layout_constraintTop_toTopOf="@id/seven" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="25dp"

            android:text="@string/nine_number"
            android:textColor="@color/text_color"
            android:textFontWeight="510"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="@id/seven"
            app:layout_constraintLeft_toRightOf="@id/eight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/seven" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="25dp"

            android:text="@string/zero_number"
            android:textColor="@color/text_color"
            android:textFontWeight="510"
            android:textSize="27sp"
            app:layout_constraintLeft_toLeftOf="@id/eight"
            app:layout_constraintRight_toRightOf="@id/eight"
            app:layout_constraintTop_toBottomOf="@id/eight" />


        <ImageView
            android:id="@+id/eraseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="25dp"

            android:src="@drawable/erase"
            app:layout_constraintBottom_toBottomOf="@id/zero"
            app:layout_constraintLeft_toLeftOf="@id/nine"
            app:layout_constraintRight_toRightOf="@id/nine"
            app:layout_constraintTop_toTopOf="@id/zero" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>